# BigFileSystem

./: CMakeLists.txt  README.md
include/: common.h  file_op.h  index_handle.h  mmap_file.h  mmap_file_op.h
src/: CMakeLists.txt  block_init_test.cpp  block_write.cpp  file_op.cc  index_handle.cc  main.cc  mmap_file.cc  mmap_file_op.cc
tests/: CMakeLists.txt  block_delete_test.cc  block_init_test.cc  block_read_test.cc  block_write_test.cc  file_op_test.cc  mmap_file_op_test.cc  mmap_file_test.cc
