
add_executable(main main.cc mmap_file.cc file_op.cc mmap_file_op.cc)
# add_library(mainlib main.cc mmap_file.cc file_op.cc mmap_file_op.cc)
# add_executable(block_init_test block_init_test.cpp mmap_file.cc file_op.cc mmap_file_op.cc index_handle.cc)
# add_executable(block_write block_write.cpp mmap_file.cc file_op.cc mmap_file_op.cc index_handle.cc)
